Cibyl (19)
	* Always export main - in crt0.S it's defined as an empty function
	with weak linkage. If it's defined elsewhere, that version will be
	used instead.

	* Reorganized examples into J2ME and non-J2ME parts, and added an
	example which shows how to export a library to Java

	* Split startup (from start.o) - this is now split in one call to
	initialize (and run global constructors), start main() and then to run
	global destructors. The NOPH_GameCanvas_get have also changed to
	NOPH_Canvas_get (with an inlined function to get the original one),
	and these objects are registered from the Java file.

	* Don't mark streams (causes problems on Nokia devices)

	* strncmp off-by-one bug fixed (Ehud Shabtai)

	* The C++ translator Makefile now handles proper dependencies

	* Implemented function colocation in methods for the C++
	translator. All important optimizations from the Python translator
	have now been implemented in the C++ ditto

	* Fixed bug in looking up function addresses in methods

	* Added mkdir/rmdir/remove for JSR075 and added these to the test
	cases

	* Some more panic cases to handle broken binaries etc in a good way
	and added gcov tests to improve the quality of the C++ translator

	* More Object methods implemented, including wait() and notify() which
	can be used to provide synchronization between threads

	* Added option to control thread safety and reorganized the code to
	support this. This is still off by default but can be enabled by the
	--thread-safe option to cibyl-mips2java

	* Inlining of builtins (softfloat operations) has now been implemented
	in the C++ translator as well. Most important optimizations except for
	function colocation are now present in the C++ translator

	* The C++ translator now inlines lb/lh/lbu/lhu/sb/sh instructions as
	well (which the Python translator doesn't). This is done if the size
	of the method is small enough.

	* Honor the --only-translate option for C++ as well
