@@ -1,0 +1,17 @@
+######################################################################
+##
+## Copyright (C) 2005,  Blekinge Institute of Technology
+##
+## Filename:      Makefile
+## Author:        Simon Kagstrom <ska@bth.se>
+## Description:   Generic Makefile
+##
+## $Id: Makefile 12466 2006-11-25 18:59:40Z ska $
+##
+######################################################################
+SUBDIRS =
+TARGET  = program
+OBJS    = main.o
+LDLIBS  = -lj2se
+
+include $(CIBYL_BASE)/build/Rules.mk
