@@ -1,4 +1,8 @@
 Cibyl (19)
+	* Implemented FileInputStream/FileOutputStream handling in libj2se
+	(new library). This allows file handling from J2SE as well and added
+	an example in examples/host-java/file-ops 
+
 	* Always export main - in crt0.S it's defined as an empty function
 	with weak linkage. If it's defined elsewhere, that version will be
 	used instead.
